# firesmoke

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ingest.yml  viewer-deploy.yml
src/firesmoke_ingest/: __init__.py
viewer/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
viewer/scripts/: smoke-test.mjs
viewer/src/: App.tsx  Controls.tsx  ForecastMap.tsx  InfoCard.tsx  PaletteCard.tsx  Pm25Layer.ts  PointChart.tsx  RunPicker.tsx  SearchCard.tsx  colormap.ts  playback.ts  useFireData.ts  useForecast.ts  useResponsive.ts  worker.ts
